<resources>

    <string name="app_name">InformaCam</string>
    <string name="welcome">Welcome!</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="take_a_boring_photo">Take 6 boring photos</string>
    <string name="we_are_generating_your">We are generating your key.  This will take a couple of minutes.</string>
    <string name="in_the_meantime_adjust">In the meantime, adjust your preferences:</string>    
    <string name="trashed">trashed</string>
    <string name="saved">saved</string>
    <string name="done">Done!</string>
    <string name="please_wait_while_your">Please wait while your key finishes generating.</string>
    <string name="ok">OK</string>
    <string name="snap_a_picture">Snap a picture</string>
    <string name="clear">Clear</string>
    <string name="sorry_your_password_doesnt">Sorry, your password doesn\'t match.</string>
    <string name="your_password_should_be">Your password should be more than 10 characters.</string>
    <string name="your_device_is_all">Your device is all set.</string>
    <string name="continue_">Continue</string>
    <string name="could_not_find_any_camera_activity">Could not find any Camera apps installed on your phone.</string>
    <string name="get_in">Get In</string>
    <string name="cancel">Cancel</string>
    <string name="permissions_title">InformaCam Permissions</string>
    <string name="permissions_description">Allows the application to read sensor data from your devices\'s available sensors (accelerometer, light meter, compass, etc.), read your network state, wifi state, and bluetooth state where available.</string>
    <string name="key_installed">Key Installed</string>
    <string name="x_has_verified_you">%1$s has verified you.  You may now send and receive media and messages from them.</string>
    <string name="send">Send\u2026</string>
    <string name="key_sent">Key Sent</string>
    <string name="you_have_successfully_installed">You have successfully installed %1$s\'s ICTD file.  Send your credentials to them, if it has not been done already.</string>
    <string name="you_have_successfully_sent">You have successfully sent your key to %1$s.  Once verified on their end, you can start sending and receiving media and messages.</string>
    <string name="you_have_sent_your_credentials_to_x">You have sent your credentials to %1$s.</string>
    <string name="export">Export</string>
    <string name="you_exported_this_x">You exported this %1$s.</string>
    <string name="you_have_resent_your_credentials_to_x">You have resent your credentials to %1$s.</string>
    <string name="you_exported_this_x_to_x">You sent this %1$s to %2$s</string>
    <string name="image">image</string>
    <string name="video">video</string>
    <string name="log">log</string>
   <!--   <string name="gps_not_available_your">GPS is not fully available.  Your data might not be as accurate.</string>-->
    <string name="email">Email</string>
    <string name="analyzing">Analyzing \u2026</string>
    <string name="informacam_could_not_send">InformaCam could not send your media.</string>
    <string name="x_of_x_processed">(%1$d/%2$d media processed)</string>
    <string name="an_ictd_for_x_already">An ICTD for %1$s already exists.  Please go over the changes below before updating.</string>
    <string name="heres_whats_changed">Here\'s what\'s changed:</string>
    <string name="old_version">Old Version</string>
    <string name="new_version">New Version</string>
    <string name="could_not_import_ictd">Could not import any ICTD file.  Please try again.</string>
    <string name="this_ictd_has_not_changed">This ICTD has not actually changed.  Update anyway?</string>
    <string name="zero">0</string>
    <string name="please_wait_video_loading">Please wait.  Video loading \u2026</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="network_error_restarting_upload_">Network error. Restarting upload...</string>
    <string name="successful_upload_to_">"Successful upload to "</string>
    <string name="upload">Upload</string>
    <string name="recording_video_">Recording video...</string>
    <string name="proof_mode_activated">Proof Mode Activated</string>
    <string name="proof_mode_string">PROOF MODE is now active. Use the menu or notification to return to this screen to "finish".</string>
    <string name="proof_mode_button">FINISH CAPTURE</string>
    <string name="cacheword_unlocked">Touch to open</string>
    <string name="remote_share_activated">Remote Sharing Activated</string>
    <string name="backing_up_camerav_gallery_to_dropbox">Dropbox backup started...</string>
    <string name="camerav_syncing_photos_and_videos_">CameraV syncing photos and videos...</string>
    <string name="dropbox_backup_complete">Dropbox backup complete</string>
</resources>
